# pytorch-cpp

./: .gitignore  CMakeLists.txt  MNIST-cpp.cpp  README.md  example-app.cpp  mnist.cpp
notebook/: envsnote.txt  get_cmake_property.txt
